# cscratch

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  allocator.h  api.h  app.h  array.c  array.h  array_test.c  binary_string.c  build.bat  build.zig  common.h  cscratch.code-workspace  cscratch.sublime-project  cscratch.sublime-workspace  file_iterator.c  gl3w.h  gui.h  image.c  image.h  imgui_decl.h  imgui_impl.h  list.c  list.h  main.c  platform.c  platform.h  platform_win32.c  readme.md  sparse.c  storage.c  vec.c  vm_arena.c  vm_arena.h
.cache/clangd/index/: api.h.D75BE36029D41086.idx  app.c.3457003D9CF5A675.idx  app.c.704F9B9FF2F76DC3.idx  arena.c.65EC806C8D80C724.idx  arena.h.86B75568DF803710.idx  array.h.4DF3D2391DD2E7E7.idx  cimgui.cpp.C4EA73B0779D3E26.idx  cimgui.h.9A17E8F84ACC0F64.idx  color.h.E347048FDB213B73.idx  common.h.55991C2BF6941E3E.idx  context.c.9B7D3A7FF14BFD77.idx  egl_context.c.90FF7D1BB0EC16FF.idx  egl_context.h.A772DB172A7681E9.idx  freetype.h.21E5784BC8CB81B4.idx  fs.h.1331CC28D3DC3B87.idx  ft2build.h.9F4614692CC07C54.idx  ftconfig.h.B60E78796C8B56B6.idx  fterrdef.h.2138D7A555B0E6A2.idx  fterrors.h.BC7C14517EC2671D.idx  ftglyph.h.54BCD6C0B111F6B7.idx  ftheader.h.999A718DA152CF50.idx  ftimage.h.9854A2CBB8477393.idx  ftmodapi.h.F7666B48FFA169E5.idx  ftmoderr.h.F6041B548D5EF439.idx  ftoption.h.B9E4CF415F2192DF.idx  ftstdlib.h.A5B9DA856AED174E.idx  ftsynth.h.328270C8ECA2D65B.idx  ftsystem.h.1114DADC8D6153AE.idx  fttypes.h.6BCFD5E240648A63.idx  glcorearb.h.D945D47AC7C278C0.idx  glfw3.h.26FA30D92BAD0E96.idx  glfw3native.h.9739AB6EA6DC41AA.idx  gload.c.9A2B4C2DBA28B76F.idx  gload.h.A35ED9450C579074.idx  gui.c.8F446BD1169216D5.idx  gui.h.1A9BB724F538782D.idx  image.c.774DD67A4FE59D51.idx  image.h.275CEF110D734368.idx  imconfig.h.6CA67D0A4068E531.idx  imgui.cpp.0F52248ED17D0F51.idx  (+61 more)
backend/: CMakeLists.txt
cmake/: AsanProfile.cmake  CompileFlags.cmake  SanitizeProfile.cmake  Win32Runtime.cmake
code/: api.h  app.h  console.c  gui.c  gui.h  image.h  platform.c  platform.h  platform_win32.c  std_allocator.h  win32.h  win32_cli.c  win32_gui.c  win32_gui_backend.cpp  win32_gui_backend.h  win32_platform.c
code/aoc2021/: CMakeLists.txt  day1.c
code/apps/canvas/: app.c
code/apps/demo/: app.c
code/apps/image_viewer/: CMakeLists.txt  app.c  version.h  version.rc
code/apps/learn_opengl/: CMakeLists.txt  app.c  camera.h  shader.h
code/apps/pwm/: pwm.c
code/apps/vulkan_test/: CMakeLists.txt  vulkan_test.c
code/backend/: CMakeLists.txt
code/demo/: app.c
code/foundation/: CMakeLists.txt  allocator.h  arena.c  arena.h  array.c  array.h  atom.h  atom.inl  color.h  color_table.h  colors.c  colors.h  common.h  core.h  error.h  fs.c  fs.h  io.c  io.h  list.c  list.h  log.c  log.h  math.inl  maths.h  mem_array.inl  memory.c  memory.h  memory_arena.c  path.c  path.h  paths.c  paths.h  scratch_buffer.c  scratch_buffer.h  string_list.c  string_list.h  strings.c  strings.h  task.c  (+12 more)
code/foundation/core/: context.h  types.h
code/gl/: gload.c  gload.h
code/gui/: CMakeLists.txt  gui.c  gui.cpp  gui.h  gui_backend_gl3.cpp  gui_backend_gl3.h  gui_backend_glfw.cpp  gui_backend_glfw.h  gui_config.h  gui_internal.h  win.cpp
code/image/: app.c  image.c  image.h  string_buff.h  version.h  version.rc
code/image_viewer/: app.c  image.c  image.h  string_buff.h  task_queue.c  task_queue.h  version.h  work_queue.c  work_queue.h
code/learn_opengl/: app.c  log.h  shader.h
code/libs/: app.h  image.h  platform.h
code/libs/foundation/: CMakeLists.txt  atom.h  atom.inl  colors.c  colors.h  core.h  error.c  error.h  io.c  io.h  log.c  log.h  math.inl  mem_array.inl  mem_buffer.inl  memory.c  memory.h  paths.c  paths.h  strings.c  strings.h  task.c  task.h  threading.c  threading.h  threading_win32.c  time.c  time.h  util.h  win32.inl
code/libs/gl/: gl_api.c  gl_api.h  gload.c  gload.h
code/libs/gui/: CMakeLists.txt  gui.c  gui.cpp  gui.h  gui_backend_gl3.cpp  gui_backend_gl3.h  gui_backend_glfw.cpp  gui_config.h  gui_internal.h  win.cpp  win.h
code/tests/: dummy.c  file_iterator.c  sort.c  sparse.c  test_arena.c  test_array.c  test_binary_string.c  test_buffer.c  test_files.c  test_iocp.c  test_odbc.c  test_rotate.c  test_sockets.c  test_threading.c  test_vec.c  test_virtual_ring_buffer.c  test_win32_threads.c
code/tests/sockets/: server.c
code/tests/threading/: auto_reset_event.c  auto_reset_event.h  benaphore.c  benaphore.h  main.c  test_auto_reset_event.c  test_basic.c  test_benaphore.c  test_mpmc_queue.c
code/vulkan_test/: CMakeLists.txt  vert.glsl  vulkan_gui_backend.cpp  vulkan_test.c
code/win32/: win32.h  win32_platform.c  win32_threading.c  win32_threading.h
demo/: app.c
ext/SDL2-2.0.14/lib/: SDL2.lib  SDL2main.lib
ext/cimgui-1.82dock/: cimgui.cpp  cimgui.h
ext/cimgui-1.82dock/generator/output/: definitions.json  definitions.lua  structs_and_enums.json  structs_and_enums.lua
ext/cimgui-1.83dock/: cimgui.cpp  cimgui.h
ext/cimgui-1.83dock/generator/: generator.bat
ext/cimgui-1.83dock/generator/output/: definitions.json  definitions.lua  impl_definitions.lua  structs_and_enums.lua
ext/cimgui-dock/: cimgui.cpp  cimgui.h
ext/cimgui-dock/generator/output/: cimgui_impl.h  definitions.json  definitions.lua  impl_definitions.json  structs_and_enums.json
ext/freetype-2.9.1/lib/: freetype.lib  freetyped.lib
foundation/: CMakeLists.txt  allocator.h  arena.c  arena.h  array.c  array.h  common.h  fs.h  list.c  list.h  maths.h  path.c  path.h  platform.h  platform_win32.c  scratch_buffer.c  scratch_buffer.h  string_list.c  string_list.h  strings.c  strings.h  util.h  vec.h  vm.h  vm_arena.c  vm_arena.h
gl/: gload.c  gload.h
image/: app.c  image.c  image.h  string_buff.h
tests/: dummy.c  sparse.c  test_arena.c  test_array.c  test_binary_string.c  test_files.c  test_odbc.c  test_ring_buffer.c  test_rotate.c  test_strings.c  test_vec.c  test_vm_arena.c  test_win32_threads.c
